# barseq-processing

./: README.md  pyproject.toml  softenv.txt
barseq/: barseq.py  barseq_helpers.py  cli.py  core.py  helpers.py  imageutils.py  utils.py
envs/: ashlar.environment.yaml  ashlar.softenv.txt  bardensr.environment.yaml  bardensr.softenv.txt  barseq.environment.yaml  barseq.softenv.txt  cellpose.environment.yaml  cellpose.softenv.txt  fiji-mist.softenv.txt  java-mist.softenv.txt  n2v.environment.yaml  n2v.softenv.txt
etc/: barseq.conf  barseq.geneseq.conf  geneseq.conf  geneseq.nopp.conf  scope.conf
geneseq/: geneseq_helpers.py
misc/: bardensr_setup_snippet.txt  convert_bardensr_codebook.py  dump_barseq_joblib.py  dump_matlab_config.py  experiment_setup_snippet.txt  image_compare.py  image_info.py  install_barseq_envs.sh  ipythonsnippet.txt  output_compare.py  slim_barseq_dataset.py
resource/: chprofile20x-50-30-20-40-20220218.tsv  chprofile20x-gene-NIKON-20-May-2025.tsv  chprofile20x-hyb-50-30-20-40-20220218.tsv  chshift20x-20220218.tsv  chshift20x-alder-manual.tsv  chshift20x-gene-NIKON-18-May-2025_py.tsv  chshift20x-hyb-NIKON-18May25_py.tsv  codebook.tsv  codebook_hyb.tsv
scripts/: aggregate-cellids_py.py  aggregate-data_py.py  aggregate-transform_np.py  background_cv2.py  barcodeseq_run.sh  basecall-bcseq_ski.py  basecall-geneseq_bardensr.py  basecall-hyb_ski.py  basecall_bardensr.py  basecall_bcseq_ski.py  basecall_geneseq_bardensr.py  basecall_hyb_ski.py  basecall_ski.py  bleedthrough_np.py  calc-params_bardensr.old.py  calc-params_bardensr.py  check_focus.py  (+29 more)
(+70 files in other folders)
