[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "barseq-processing"
version = "1.0.0"

description = "Data processing forBARseq"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
authors = [
  { name="John Hover", email="hover@cshl.edu" },
]

requires-python = ">= 3.9"

dependencies = [
 	"h5py",
	"imageio",
	"ipython",
	"joblib",
	"jupyter",
	"natsort",
 	"networkx",
 	"numpy",
	"opencv", 
	"pandas",
 	"scikit-image", 
 	"scipy",
	"tifffile", 
]

[tool.setuptools.packages.find]
include = ["barseq*"]

[project.scripts]
process_workflow = "barseq.cli:process_workflow" 


[project.urls]
Homepage = "https://github.com/ZadorLaboratory/barseq-processing"
Issues = "https://github.com/ZadorLaboratory/barseq-processing/issues"